feat: added follower count logics